app/public/styles/main.css
/* ... */
.homeHeaderPadding {
  padding: 14px 16px 16px 16px;
}
.ui.styled.accordion .removeline.title {
  margin: 0;
  padding: 0px 0px 0px 0px !important;
  color: rgba(0, 0, 0, 0.4);
  font-weight: 700;
  border-top: none !important;
  transition: background .1s ease,color .1s ease;
}
.accordian-HomeLeft-text {
  font-size: 14px !important;
  color: black !important;
  padding-left: 77% !important;
}
.accordian-homeIcon {
  color: black !important;
}
.ui.styled.accordion .active.title .angle.down.icon {
  background: 0 0;
  color: rgba(0, 0, 0, 0.95);
  -webkit-transform: rotate(270deg);
  transform: rotate(270deg);
}
.homePage .slick-slider {
  margin-bottom: 0px !important;
}
.todolabel.ui.label {
  margin-left: 0.5em;
}
.homefeedcard.ui.segment {
  padding: 16px 16px 16px 16px;
}
.homefeeddescription p {
  opacity: 0.67;
  color: #333333;
}
.connanswer {
  color: #979797;
  font-family: "Open Sans";
  font-size: 10px;
  line-height: 14px;
}
.sunblogin {
  color: #212121!important;
  z-index: 11;
}
.ui[class*="right ribbon"].label:after {
  left: auto;
  right: 0;
  border-style: solid;
  border-width: 0em 0em 0 0 !important;
  border-color: transparent;
  border-top-color: inherit;
}
.opacity-cardContent {
  opacity: 0.2 !important;
}
.card-Content-Heading {
  padding-bottom: 10% !important;
  padding-left: 4% !important;
  font-size: 16px;
  margin: 11px;
  font-weight: 600;
  color: rgba(0, 0, 0, 0.7);
}
.card-Content-HeadingFont {
  padding: 0em 0em 1em 1em;
}
.landing-image {
  border-radius: 0.65em;
}
.landing-text {
  padding-top: 4em !important;
}
.landing-text p {
  margin: 0;
  font-size: 14px;
}
.landing-grid {
  background-color: #fff;
  padding: 50px;
  border-bottom: 1px solid rgba(206, 197, 197, 0.79);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.075);
}
.image-grid {
  margin: 40px 0 40px 0;
}
.feature-header {
  padding: 10px;
}
.announcementCard-header {
  padding: 0;
}
.ui.segment {
  position: relative;
  background: #fff;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
  margin: 1rem 0;
  padding: 20px 20px;
  border-radius: 4px;
  border: 1px solid #d8dee2;
}
.annannouncement-description {
  margin-top: 11px;
}
.homeCard.ui.card > .content {
  padding: 0;
}
.homeCard.ui.card > .content > .header + .description {
  margin-top: 11px;
}
.serch-allresult {
  color: #717171;
}
.search-content-header {
  background: transparent;
  box-shadow: none;
}
#search-suggestions {
  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
  height: 200px;
  overflow-y: auto;
  z-index: 10;
  position: absolute;
  background: white;
  text-align: left;
  width: 600px;
}
#search-suggestions .result .content .title {
  font-size: 13px;
  padding: 2px;
  color: #717171;
  cursor: pointer;
}
#search-suggestions .result .content .title:hover {
  color: black;
}
@media only screen and (max-width: 1400px) {
  #search-suggestions {
    width: 500px;
  }
}
@media only screen and (max-width: 1097px) {
  #search-suggestions {
    width: 405px;
  }
}
.filtersearch.ui.selection.dropdown {
  min-width: 108%;
}
.dropdown-content {
  text-align: right;
  white-space: nowrap;
  padding: .5em 0;
}
.filter-text {
  text-align: left;
  vertical-align: middle;
  line-height: 2.1;
  white-space: nowrap;
}
.filter-button {
  white-space: nowrap;
}
.searchfilterinput.ui.search .prompt {
  border-radius: 0;
}
.searchinput {
  width: 600px;
}
@media only screen and (max-width: 1400px) {
  .searchinput {
    width: 500px;
  }
}
@media only screen and (max-width: 1097px) {
  .searchinput {
    width: 405px;
  }
}
.searchicon.ui.icon.input input {
  padding-right: 6px!important;
  border: 1px solid rgba(51, 51, 51, 0.33);
  border-radius: 0 .28571429rem .28571429rem 0;
  padding-top: 0.85em;
}
.searchinput.ui.icon.input > i.circular.icon {
  top: 0.45em;
}
.searchicon.ui.icon.input i {
  cursor: pointer;
}
.ui.multiple.dropdown > .text {
  white-space: nowrap;
}
.filtercolumn.ui.grid > .column:not(.row) {
  padding-left: 1.7em;
}
.filtercolmntext.ui.grid > .column:not(.row) {
  padding-left: 1.39em;
}
.searchfilterbutton.ui.tiny.button {
  font-size: 1em;
}
.searchdropdown.ui.basic.button {
  box-shadow: 0 0 0 1px rgba(51, 51, 51, 0.33) inset;
}
.filter-sel-text {
  position: static;
  padding: 0;
  max-width: 100%;
  margin: .45238095em 0 .45238095em .64285714em;
  line-height: 1.21428571em;
}
.resource-padding.ui.grid > .column:not(.row) {
  padding-top: 0;
  margin-bottom: 1em;
}
.dash-heading-border {
  border-bottom: 1px dashed #333333;
  overflow: auto;
}
.block-border-bottom {
  border-bottom: 1px solid #ddd;
  padding: 0px 0px 10px 0px;
}
.currentcourse-block-desc {
  line-height: 22px;
  padding-top: 10px;
  padding-left: 20px;
}
.course-intro-big {
  margin-top: 0px;
  line-height: 1;
  display: block;
  padding-bottom: 5px;
}
.course-intro-big span,
.course-intro-small span {
  font-family: 'FrutigerNeueW01-Regular';
  font-size: 1.25em;
}
.course-intro-small {
  font-size: 0.9325em;
  cursor: pointer;
  color: #428bca;
}
.dashboardBadgeText,
.dashboardBadgeText span {
  text-align: center !important;
  margin-top: 20px;
  font-size: 64px;
  margin-bottom: 15px;
  font-family: 'Frutiger Neue W01 UltLt';
  display: block;
  width: 100%;
}
.dynamic-section-card .slider .card {
  position: relative !important;
  background-color: transparent!important;
  box-shadow: none;
}
.dynamic-section-card .slider .card .image img {
  padding: 0 !important;
  height: 150px;
}
.dynamic-section-card .slider .card .image .header {
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.2);
  color: #fff;
  width: 100%;
  margin: 0;
  padding: -30px !important;
  max-height: 70px;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}
.dynamic-section-card .slider .card .content {
  background-color: transparent!important;
}
.dynamic-section-card .slider .card .extra {
  border-top: transparent !important;
}
/* ... */

